src/test/deca/context/invalid/MethodInvalid.deca
class A{
  int x;
  boolean f(){
    boolean y;
    //y = f();
    return f();
  }
}
